--- a/src/main/java/com/mycompany/jogos/IjfUsuario.form
+++ b/src/main/java/com/mycompany/jogos/IjfUsuario.form
@@ -68,9 +68,9 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jftDataNascimento" pref="298" max="32767" attributes="0"/>
+                              <Component id="jftDataNascimento" pref="293" max="32767" attributes="0"/>
                               <Component id="jtfEmail" max="32767" attributes="0"/>
-                              <Component id="jtfPais" alignment="1" pref="298" max="32767" attributes="0"/>
+                              <Component id="jtfPais" alignment="1" pref="293" max="32767" attributes="0"/>
                               <Component id="jtfNome" alignment="1" max="32767" attributes="0"/>
                               <Component id="jtfCpf" alignment="1" max="32767" attributes="0"/>
                               <Component id="cmbUsuario" max="32767" attributes="0"/>
@@ -214,7 +214,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
-            <Property name="text" type="java.lang.String" value="NASCIMENTO (dd/mmyyyy)"/>
+            <Property name="text" type="java.lang.String" value="NASCIMENTO (dd/mm/aaaa)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftDataNascimento">
